Archive2/8e/58c622f67bb5ad/output
main.cpp:1:1: error: new types may not be defined in a return type
 class Teacher
 ^
main.cpp:1:1: note: (perhaps a semicolon is missing after the definition of 'Teacher')
main.cpp:6:18: error: return type specification for constructor invalid
 Teacher::Teacher()
                  ^
