Archive2/8e/58c622f67bb5ad/main.cpp
class Teacher
{
    Teacher();
}

Teacher::Teacher()
{}